  * Added 'DBDel' and 'DBDelTree' manager commands.
  * cdr_manager now reports events via the "cdr" level, separating it from
     the very verbose "call" level.
  * Manager users are now stored in memory. If you change the manager account
    list (delete or add accounts) you need to reload manager.
  * Added Masquerade manager event for when a masquerade happens between
     two channels.

Dialplan functions
------------------
  * Added the DEVICE_STATE() dialplan function which allows retrieving any device
    state in the dialplan, as well as creating custom device states that are
    controllable from the dialplan.
  * Extend CALLERID() function with "pres" and "ton" parameters to
     fetch string representation of calling number presentation indicator
     and numeric representation of type of calling number value.
  * MailboxExists converted to dialplan function
  * A new option to Dial() for telling IP phones not to count the call
    as "missed" when dial times out and cancels.
  * Added LOCK(), TRYLOCK(), and UNLOCK(), which provide a single level dialplan
    mutex.  No deadlocks are possible, as LOCK() only allows a single lock to be
    held for any given channel.  Also, locks are automatically freed when a
    channel is hung up.
  * Added HINT() dialplan function that allows retrieving hint information.
    Hints are mappings between extensions and devices for the sake of 
    determining the state of an extension.  This function can retrieve the list
    of devices or the name associated with a hint.
  * Added EXTENSION_STATE() dialplan function which allows retrieving the state
    of any extension.
  * Added SYSINFO() dialplan function which allows retrieval of system information

CLI Changes
-----------
  * New CLI command "core show hint" (usage: core show hint <exten>)
  * New CLI command "core show settings"
  * Added 'core show channels count' CLI command.
  * Added the ability to set the core debug and verbose values on a per-file basis.